# accounts-service-Demo

./: .gitignore  .spectral.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  accounts-service.yaml  docker-compose.yaml  pyproject.toml
accounts/: __init__.py  main.py
accounts/api/: models.py  routes.py
accounts/services/: account.py
examples/: example_usage.py
mocks/: my_mock_server.yaml
tests/: test_api.py  test_conftest.py  test_services.py
